# stm32

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  STM32F756ZG.ld
hal2/: reset.c
hal2/hal2/: exti.h  gpio.h  nohandlers.h  nvic.h  rcc.h  systick.h  uart.h  util.h
src/: blink.c  button_exti.c  print_usart.c
